# FerroTeX

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  CHANGELOG.md  CI-TESTING.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  ci_log.txt  codecov.yml  package-lock.json  package.json  tarpaulin-report.html
.cargo/: audit.toml  config.toml  config.toml.example
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  linkcheck-external.yml  pages.yml  publish-extension.yml  release.yml  wiki-sync.yml
.windsurf/: rules
.windsurf/workflows/: atomic-decomposition.md  ferrotex-release-checklist.md  ferrotex-rust-verification.md  prepare-ferrotex-implementation-pr.md  refactoring-memento.md
coverage/: cobertura.xml
crates/ferrotex-analysis/: Cargo.toml
crates/ferrotex-analysis/src/: lib.rs
crates/ferrotex-build/: Cargo.toml
crates/ferrotex-build/src/: artifacts.rs  compiler.rs  lib.rs
crates/ferrotex-cli/: Cargo.toml
crates/ferrotex-cli/src/: main.rs
crates/ferrotex-core/: Cargo.toml
crates/ferrotex-core/src/: lib.rs
crates/ferrotex-core/src/math_validator/: delimiter_validator.rs  mod.rs  tests.rs
crates/ferrotex-core/src/package_manager/: ctan_db.rs  mod.rs  tests.rs
crates/ferrotex-core/tests/: package_manager_tests.rs
crates/ferrotex-dap/: Cargo.toml
crates/ferrotex-dap/src/: lib.rs  main.rs  shim.rs
crates/ferrotex-log/: Cargo.toml
crates/ferrotex-log/src/: ir.rs  lib.rs  parser.rs  tests.rs
crates/ferrotex-log/tests/: golden_tests.rs  messy_logs.rs  parser_tests.rs  stress_tests.rs  wrapping_tests.rs
crates/ferrotex-log/tests/fixtures/: basic.golden.json  latexmk_noise.txt
crates/ferrotex-math-semantics/: Cargo.toml
crates/ferrotex-math-semantics/src/: analysis.rs  delimiters.rs  lib.rs
crates/ferrotex-package/: Cargo.toml
crates/ferrotex-package/src/: lib.rs  scanner.rs
crates/ferrotex-syntax/: Cargo.toml
crates/ferrotex-syntax/src/: additional_tests.rs  bibtex.rs  coverage_tests.rs  lexer.rs  lib.rs  parser.rs
crates/ferrotex-syntax/tests/: resilience.rs
crates/ferrotexd/: Cargo.toml  README.md
crates/ferrotexd/src/: completer.rs  fmt.rs  hover.rs  lib.rs  main.rs  synctex.rs  workspace.rs
crates/ferrotexd/src/diagnostics/: error_index.rs  math.rs  mod.rs
crates/ferrotexd/tests/: e2e_test.rs
docs/: README.md  _config.yml  faq.md  glossary.md  index.md
docs/_sass/custom/: custom.scss
docs/adrs/: 0001-typed-event-ir.md  0002-uncertainty-as-first-class.md  0003-thin-extension-thick-server.md  0004-streaming-incremental-parsing.md  README.md  index.md
docs/architecture/: data-flow.md  index.md  overview.md
docs/design/: marketplace_overhaul.md
docs/development/: benchmarks.md  index.md  release.md  setup.md  testing.md
docs/extension/: overview.md
docs/research/: baselines.md  datasets.md  evaluation-plan.md  index.md  reproducibility.md  threats-to-validity.md
docs/spec/: build-orchestration.md  cli.md  compatibility-matrix.md  completion-sources.md  completion.md  configuration.md  dap.md  diagnostic-codes.md  diagnostic-mapping.md  engine-adapters.md  export.md  feature-matrix.md  file-watching.md  formatting-backend.md  formatting.md  index.md  language-platform.md  log-event-ir.md  log-grammar.md  lsp.md  performance-slos.md  project-model.md  provenance.md  schema-versioning.md  semantic-tokens.md  source-ir.md  symbol-index.md  synctex.md  tex-path-resolution.md
editors/vscode/: .vscodeignore  LICENSE.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  validate-settings.js
editors/vscode/snippets/: latex.json
editors/vscode/src/: engineValidator.ts  extension.ts  imagePaste.ts  installTectonic.ts  pdfPreview.ts
editors/vscode/src/test/: imagePaste.test.ts  runTest.ts
editors/vscode/src/test/suite/: extension.test.ts  index.ts  settings.test.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_panic.rs
patches/tectonic_engine_xetex/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  README.md  build.rs
patches/tectonic_xetex_layout/: CHANGELOG.md  Cargo.toml  README.md  build.rs
scripts/: check-links.mjs  check-yaml.mjs  markdown-link-check.external.json  markdown-link-check.internal.json  markdown-link-check.json  monitor_mem.sh
tests/tex/smoke/: main.tex
wiki/: FAQ.md  Getting-Started.md  Home.md  _Sidebar.md
