[workspace]
members = [
    "crates/ferrotex-cli", "crates/ferrotex-core",
    "crates/ferrotex-log",
    "crates/ferrotex-syntax",
    "crates/ferrotexd",
    "crates/ferrotex-package",
    "crates/ferrotex-math-semantics",
    "crates/ferrotex-analysis",
    "fuzz", "crates/ferrotex-build", "crates/ferrotex-dap",
]
resolver = "2"

[patch.crates-io]
tectonic_xetex_layout = { path = "patches/tectonic_xetex_layout" }
tectonic_engine_xetex = { path = "patches/tectonic_engine_xetex" }


