[package]
name = "ferrotex-analysis"
version = "0.20.1"
edition = "2024"
description = "Abstract interpretation framework for TeX macros"
license = "Apache-2.0 OR MIT"

[dependencies]
ferrotex-syntax = { path = "../ferrotex-syntax", version = "0.20.1" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
