[package]
name = "ferrotex-cli"
version = "0.19.2"
edition = "2021"
description = "CLI for FerroTeX tools"
license = "Apache-2.0 OR MIT"

[dependencies]
ferrotex-log = { path = "../ferrotex-log", version = "0.19.2" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
notify = "6.1"

[dev-dependencies]
tempfile = "3"
