[package]
name = "ferrotex-dap"
version = "0.20.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
# crossbeam-channel = "0.5" # Likely needed for message passing
# dap-types? Writing raw for now to avoid bulky deps
ferrotex-build = { path = "../ferrotex-build", version = "0.20.0" }

[features]
default = []
tectonic-engine = ["tectonic", "tectonic_status_base", "tectonic_io_base"]

[dependencies.tectonic]
version = "0.15"
optional = true

[dependencies.tectonic_status_base]
version = "0.2"
optional = true

[dependencies.tectonic_io_base]
version = "0.4"
optional = true

