[package]
name = "ferrotex-math-semantics"
version = "0.20.0"
edition = "2024"
description = "Formal semantics and shape analysis for LaTeX math environments"
license = "Apache-2.0 OR MIT"

[dependencies]
ferrotex-syntax = { path = "../ferrotex-syntax", version = "0.20.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rowan = "0.15"

[dev-dependencies]
expect-test = "1.4"
