[package]
name = "ferrotexd"
version = "0.16.0"
edition = "2024"
description = "LSP implementation for FerroTeX"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jxoesneon/FerroTeX"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify = "6.0"
dashmap = "5.5"
ferrotex-log = { path = "../ferrotex-log", version = "0.14.0" }
ferrotex-syntax = { path = "../ferrotex-syntax", version = "0.14.0" }
line-index = "0.1"
rowan = "0.15"
async-trait = "0.1.89"
regex = "1.12.2"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
