[package]
name = "ferrotexd"
version = "0.18.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dashmap = "5.5"
crossbeam-channel = "0.5"
notify = "6.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
tempfile = "3.8"
url = "2.5"
glob = "0.3"
walkdir = "2.4"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
line-index = "0.1"
dirs = "5.0"
tectonic = { version = "0.15", default-features = false }
which = "4.4"
once_cell = "1.18"

ferrotex-syntax = { path = "../ferrotex-syntax" }
ferrotex-log = { path = "../ferrotex-log" }
ferrotex-core = { path = "../ferrotex-core" }

[dev-dependencies]
tempfile = "3.8"
