[package]
name = "ferrotexd"
version = "0.20.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dashmap = "5.5"
crossbeam-channel = "0.5"
notify = "6.1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
zip = "0.6"
tempfile = "3.8"
url = "2.5"
glob = "0.3"
walkdir = "2.4"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
line-index = "0.1"
dirs = "5.0"
which = "4.4"
once_cell = "1.18"
lazy_static = "1.4"
rowan = "0.15"
async-trait = "0.1"

ferrotex-syntax = { path = "../ferrotex-syntax", version = "0.20.0" }
ferrotex-log = { path = "../ferrotex-log", version = "0.20.0" }
ferrotex-package = { path = "../ferrotex-package", version = "0.20.0" }
ferrotex-math-semantics = { path = "../ferrotex-math-semantics", version = "0.20.0" }
ferrotex-core = { path = "../ferrotex-core", version = "0.20.0" }

tectonic = { version = "0.15", default-features = false, optional = true }

[features]
default = []
use-tectonic = ["tectonic"]

[dev-dependencies]
